[package]
name = "catsay"
version = "0.1.0"
authors = ["leo <leonardod.trimarchi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
colored = "1.7.0"
failure = "0.1.5"
exitfailure = "0.5.1"
assert_cmd = "0.11.1"
predicates = "1.0.0"